# CompileTimeEncryption

./: .gitignore  CMakeLists.txt  README.md
include/: CompileTimeEncryption.h
include/CompileTimeEncryption/: XorStr.h
